# fermware

./: .gitmodules  CMakeLists.txt  README.org
src/: CMakeLists.txt  commands.cpp  commands.h  constants.h  globals.cpp  globals.h  main.cpp  sensors.cpp  sensors.h  system.cpp  system.h  zone.cpp  zone.h
